update component Header: add Btn for logout and fix style: z-index

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,11 +4,13 @@
     top: 0;
     left: 0;
     background-color: #0d1117;
+    z-index: 999;
 }
 
 .wrapper {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     height: 60px;
     color: #fff;
 }
